--- a/通用说明.html
+++ b/通用说明.html
@@ -111,6 +111,22 @@
           <p></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u9" class="ax_default _形状">
+        <div id="u9_div" class=""></div>
+        <div id="u9_text" class="text ">
+          <p><span>&nbsp;&nbsp; &nbsp;&nbsp; </span><span style="color:#FFFFFF;">否</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u10" class="ax_default _形状">
+        <div id="u10_div" class=""></div>
+        <div id="u10_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
